Fix body overflow issue

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -29,6 +29,7 @@
 body {
 
   overflow-y: overlay;
+  overflow-x: hidden;
   background-color: transparent !important;
 }
 
